doccify/yaml/service-doc.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-docsify
spec:
  selector:
    app: docksifypod
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
