doccify/yaml/ingress-doc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docsify-ingress
  namespace: docsify
spec:
  ingressClassName: nginx
  rules:
  - host: docsi.pwaawp.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-docsify-nodeport
            port:
              number: 3000
